--- a/.gitignore
+++ b/.gitignore
@@ -44,4 +44,5 @@ testem.log
 Thumbs.db
 
 # environments
-/src/environments
+/src/environments/environment.prod.ts
+/src/environments/environment.ts
