--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^5.2.0",
     "@ng-bootstrap/ng-bootstrap": "^1.1.0",
     "@types/googlemaps": "^3.30.8",
+    "agm-direction": "^0.4.2",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.6",
